(Raster)

turn off draw queue for ipc imageclass draws...

-------------------------------------------------------------------------------

Wed Oct  6 20:31:02 PDT 1999
(Raster)

need to add nop ipc call - need it for syncing purposes.

-------------------------------------------------------------------------------

Wed Oct  6 23:40:32 PDT 1999
(Raster)

/* that's it - people are stupid and have executable images and just */
/* don't get it - so I'm disablign this to save people from their own */
/* stupidity */

ho hum.........

-------------------------------------------------------------------------------

Thu Oct  7 12:10:53 PDT 1999
(Raster)

have the SetupUserInitialization chekc if the fopen succeeded.

-------------------------------------------------------------------------------

Thu Oct  7 13:49:23 PDT 1999
(Raster)

do the SetupUserInitialization late in the startup - not early.. :)

-------------------------------------------------------------------------------

Thu Oct  7 16:06:02 PDT 1999
(Mandrake)

this is broken.  good thing it's commented out.

-------------------------------------------------------------------------------

Thu Oct  7 16:17:35 PDT 1999
(Mandrake)

still having a few issues with this code, but at least we're STARTING to have
some of the arrange code for kpanel working.

-------------------------------------------------------------------------------

Thu Oct  7 16:46:47 PDT 1999
(Mandrake)

a little bit better arrange code for handling panel hints.
still have some work

-------------------------------------------------------------------------------

Thu Oct  7 20:44:53 PDT 1999
(Mandrake)

now when you use the standard autoarrange action stuff it also will pay
attention to panel's hints

-------------------------------------------------------------------------------

Thu Oct  7 21:16:32 PDT 1999
(Mandrake)

more work on arranger code paying attention to kpanel.  next to make window
snaps work with it (seriously dreading this one)