@@ -22,7 +22,7 @@
  */
 #include "E.h"
 
-void 
+void
 SetFrameProperty(EWin * ewin)
 {
    static Atom         atom_set = 0;
@@ -43,7 +43,7 @@ SetFrameProperty(EWin * ewin)
 		   PropModeReplace, (unsigned char *)&val, 4);
 }
 
-void 
+void
 KillEwin(EWin * ewin)
 {
    EWin              **gwins;
@@ -68,7 +68,7 @@ KillEwin(EWin * ewin)
 
 }
 
-void 
+void
 DetermineEwinFloat(EWin * ewin, int dx, int dy)
 {
    char                dofloat = 0;
@@ -117,7 +117,7 @@ DetermineEwinFloat(EWin * ewin, int dx, int dy)
    EDBUG_RETURN_;
 }
 
-void 
+void
 SetEInfoOnAll()
 {
    int                 i, num;
@@ -205,7 +205,7 @@ GetFocusEwin(void)
    EDBUG_RETURN(mode.ewin);
 }
 
-void 
+void
 SlideEwinTo(EWin * ewin, int fx, int fy, int tx, int ty, int speed)
 {
    int                 k, spd, x, y, min, tmpx, tmpy, tmpw, tmph;
@@ -267,7 +267,7 @@ SlideEwinTo(EWin * ewin, int fx, int fy, int tx, int ty, int speed)
    EDBUG_RETURN_;
 }
 
-void 
+void
 SlideEwinsTo(EWin ** ewin, int *fx, int *fy, int *tx, int *ty,
 	     int num_wins, int speed)
 {
@@ -351,7 +351,7 @@ SlideEwinsTo(EWin ** ewin, int *fx, int *fy, int *tx, int *ty,
    EDBUG_RETURN_;
 }
 
-void 
+void
 AddToFamily(Window win)
 {
    EWin               *ewin, *ewin2;
@@ -952,7 +952,7 @@ AddInternalToFamily(Window win, char noshow, char *bname, int type, void *ptr)
    EDBUG_RETURN(ewin);
 }
 
-void 
+void
 HonorIclass(char *s, int id)
 {
    AwaitIclass        *a;
@@ -997,7 +997,7 @@ HonorIclass(char *s, int id)
    EDBUG_RETURN_;
 }
 
-void 
+void
 SyncBorderToEwin(EWin * ewin)
 {
    Border             *b;
@@ -1016,7 +1016,7 @@ SyncBorderToEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 UpdateBorderInfo(EWin * ewin)
 {
    int                 i;
@@ -1028,7 +1028,7 @@ UpdateBorderInfo(EWin * ewin)
      }
 }
 
-void 
+void
 RealiseEwinWinpart(EWin * ewin, int i)
 {
    EDBUG(4, "RealiseEwinWinpart");
@@ -1050,7 +1050,7 @@ RealiseEwinWinpart(EWin * ewin, int i)
    EDBUG_RETURN_;
 }
 
-int 
+int
 DrawEwinWinpart(EWin * ewin, int i)
 {
    int                 move = 0, resize = 0, state = 0, ret = 0;
@@ -1087,7 +1087,7 @@ DrawEwinWinpart(EWin * ewin, int i)
    EDBUG_RETURN(ret);
 }
 
-int 
+int
 ChangeEwinWinpart(EWin * ewin, int i)
 {
    int                 state = 0, ret = 0;
@@ -1116,7 +1116,7 @@ ChangeEwinWinpart(EWin * ewin, int i)
    EDBUG_RETURN(ret);
 }
 
-void 
+void
 DrawEwin(EWin * ewin)
 {
    int                 i, state;
@@ -1148,7 +1148,7 @@ DrawEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-int 
+int
 ChangeEwinWinpartContents(EWin * ewin, int i)
 {
    int                 state = 0, ret = 0;
@@ -1171,7 +1171,7 @@ ChangeEwinWinpartContents(EWin * ewin, int i)
    EDBUG_RETURN(ret);
 }
 
-void 
+void
 CalcEwinWinpart(EWin * ewin, int i)
 {
    int                 x, y, w, h, ox, oy, max, min;
@@ -1303,7 +1303,7 @@ CalcEwinWinpart(EWin * ewin, int i)
    EDBUG_RETURN_;
 }
 
-void 
+void
 CalcEwinSizes(EWin * ewin)
 {
    int                 i;
@@ -1583,7 +1583,7 @@ CreateEwin()
    EDBUG_RETURN(ewin);
 }
 
-void 
+void
 FreeEwin(EWin * ewin)
 {
    EWin               *ewin2;
@@ -1694,7 +1694,7 @@ FreeEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 SetEwinBorder(EWin * ewin)
 {
    Border             *b;
@@ -1720,7 +1720,7 @@ SetEwinBorder(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 SetEwinToBorder(EWin * ewin, Border * b)
 {
    int                 i;
@@ -1868,7 +1868,7 @@ SetEwinToBorder(EWin * ewin, Border * b)
    EDBUG_RETURN_;
 }
 
-void 
+void
 ResizeEwin(EWin * ewin, int w, int h)
 {
    char                resize = 0;
@@ -1901,7 +1901,7 @@ ResizeEwin(EWin * ewin, int w, int h)
    EDBUG_RETURN_;
 }
 
-void 
+void
 DetermineEwinArea(EWin * ewin)
 {
    int                 pax, pay;
@@ -1921,7 +1921,7 @@ DetermineEwinArea(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 MoveEwin(EWin * ewin, int x, int y)
 {
    int                 dx, dy;
@@ -1978,7 +1978,7 @@ MoveEwin(EWin * ewin, int x, int y)
    EDBUG_RETURN_;
 }
 
-void 
+void
 MoveResizeEwin(EWin * ewin, int x, int y, int w, int h)
 {
    int                 dx, dy;
@@ -2050,7 +2050,7 @@ MoveResizeEwin(EWin * ewin, int x, int y, int w, int h)
    EDBUG_RETURN_;
 }
 
-void 
+void
 FloatEwin(EWin * ewin)
 {
    static int          call_depth = 0;
@@ -2081,7 +2081,7 @@ FloatEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 FloatEwinAt(EWin * ewin, int x, int y)
 {
    int                 dx, dy;
@@ -2119,7 +2119,7 @@ FloatEwinAt(EWin * ewin, int x, int y)
    EDBUG_RETURN_;
 }
 
-void 
+void
 RestackEwin(EWin * ewin)
 {
    Window             *wl;
@@ -2262,7 +2262,7 @@ RestackEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 RaiseEwin(EWin * ewin)
 {
    static int          call_depth = 0;
@@ -2298,7 +2298,7 @@ RaiseEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 LowerEwin(EWin * ewin)
 {
    static int          call_depth = 0;
@@ -2329,7 +2329,7 @@ LowerEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 ShowEwin(EWin * ewin)
 {
    EDBUG(3, "ShowEwin");
@@ -2364,7 +2364,7 @@ ShowEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 HideEwin(EWin * ewin)
 {
    EDBUG(3, "HideEwin");
@@ -2383,7 +2383,7 @@ HideEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 FreeBorder(Border * b)
 {
    int                 i;
@@ -2452,7 +2452,7 @@ CreateBorder(char *name)
    EDBUG_RETURN(b);
 }
 
-void 
+void
 AddBorderPart(Border * b, ImageClass * iclass, ActionClass * aclass,
 	      TextClass * tclass, ECursor * ec,
 	      char ontop, int flags, char isregion,
@@ -2539,7 +2539,7 @@ for (i = 0; i < ewin->border->num_winparts; i++) \
     } \
 }
 
-void 
+void
 MinShadeSize(EWin * ewin, int *mw, int *mh)
 {
    int                 i, p;
@@ -2603,7 +2603,7 @@ MinShadeSize(EWin * ewin, int *mw, int *mh)
      }
 }
 
-void 
+void
 InstantShadeEwin(EWin * ewin)
 {
    XSetWindowAttributes att;
@@ -2695,7 +2695,7 @@ InstantShadeEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 InstantUnShadeEwin(EWin * ewin)
 {
    XSetWindowAttributes att;
@@ -2779,7 +2779,7 @@ InstantUnShadeEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 ShadeEwin(EWin * ewin)
 {
    XSetWindowAttributes att;
@@ -3044,7 +3044,7 @@ ShadeEwin(EWin * ewin)
    EDBUG_RETURN_;
 }
 
-void 
+void
 UnShadeEwin(EWin * ewin)
 {
    XSetWindowAttributes att;
